--- a/alquimia-front/src/app/components/producto-form/producto-form.html
+++ b/alquimia-front/src/app/components/producto-form/producto-form.html
@@ -9,48 +9,71 @@
     <form [formGroup]="productoForm" (ngSubmit)="guardarProducto()" class="p-8 space-y-8">
       
       <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-          <div class="md:col-span-2">
-              <label class="block text-sm font-semibold text-slate-700 mb-1">Nombre del Producto</label>
-              <input formControlName="nombre" type="text" class="w-full rounded-lg border-slate-300 bg-slate-200 focus:border-slate-500 focus:ring-slate-500 shadow-sm p-2.5" placeholder="Ej: Espejo Redondo">
-          </div>
-
-          <div>
-              <label class="block text-sm font-semibold text-slate-700 mb-1">Código de Barras</label>
-              <input formControlName="codigo_barra" type="text" class="w-full rounded-lg border-slate-300 bg-slate-200 focus:bg-white focus:border-slate-500 focus:ring-slate-500 shadow-md transition-all p-2.5">
-          </div>
-
-          <div>
-  <label class="block text-sm font-medium text-gray-700 mb-1">Categoría</label>
-  <div class="relative">
-    <select 
-      formControlName="categoria"
-      class="w-full bg-white border border-gray-300 rounded-lg px-4 py-2 appearance-none focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent transition-all">
-      
-      <option value="" disabled selected>Selecciona una categoría...</option>
-      
-      <option *ngFor="let cat of categorias" [value]="cat">
-        {{ cat }}
-      </option>
-      
-    </select>
     
-    <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
-      <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
-        <path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/>
-      </svg>
+    <div class="md:col-span-2">
+        <label class="block text-sm font-semibold text-slate-700 mb-1">Nombre del Producto</label>
+        <input formControlName="nombre" 
+               type="text" 
+               class="w-full rounded-lg border-slate-300 bg-slate-200 focus:bg-white focus:border-slate-500 focus:ring-slate-500 shadow-sm transition-all p-2.5" 
+               placeholder="Ej: Espejo Redondo">
     </div>
-  </div>
 
-  <div *ngIf="productoForm.get('categoria')?.touched && productoForm.get('categoria')?.invalid" class="text-red-500 text-xs mt-1">
-    La categoría es requerida
-  </div>
+    <div>
+        <label class="block text-sm font-semibold text-slate-700 mb-1"></label>
+        <input formControlName=
+               type="text" 
+               class="w-full rounded-lg border-slate-300 bg-slate-200 focus:bg-white focus:border-slate-500 focus:ring-slate-500 shadow-md transition-all p-2.5">
+    </div>
+
+    <div>
+        <label class="block text-sm font-semibold text-slate-700 mb-1">Código de Barras</label>
+        <input formControlName="codigo_barra"
+               type="text" 
+               class="w-full rounded-lg border-slate-300 bg-slate-200 focus:bg-white focus:border-slate-500 focus:ring-slate-500 shadow-md transition-all p-2.5" 
+               placeholder="Ej: PROV-1234">
+        <p class="text-[10px] text-slate-400 mt-1 ml-1 font-medium">Ref. del local</p>
+    </div>
+
+    <div>
+        <label class="block text-sm font-semibold text-slate-700 mb-1">Código del Proveedor</label>
+        <input formControlName="codigo_proveedor" 
+               type="text" 
+               class="w-full rounded-lg border-slate-300 bg-slate-200 focus:bg-white focus:border-slate-500 focus:ring-slate-500 shadow-md transition-all p-2.5" 
+               placeholder="Ej: PROV-1234">
+        <p class="text-[10px] text-slate-400 mt-1 ml-1 font-medium">Ref. original del fabricante</p>
+    </div>
+
+    <div>
+        <label class="block text-sm font-semibold text-slate-700 mb-1">Categoría</label>
+        <div class="relative">
+            <select formControlName="categoria"
+                    class="w-full rounded-lg border-slate-300 bg-slate-200 focus:bg-white focus:border-slate-500 focus:ring-slate-500 shadow-md transition-all p-2.5 appearance-none">
+                <option value="" disabled selected>Selecciona una categoría...</option>
+                <option *ngFor="let cat of categorias" [value]="cat">
+                    {{ cat }}
+                </option>
+            </select>
+            
+            <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
+                <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                    <path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/>
+                </svg>
+            </div>
+        </div>
+        <div *ngIf="productoForm.get('categoria')?.touched && productoForm.get('categoria')?.invalid" class="text-red-500 text-xs mt-1">
+            La categoría es requerida
+        </div>
+    </div>
+
+    <div>
+        <label class="block text-sm font-semibold text-slate-700 mb-1">Proveedor</label>
+        <input formControlName="proveedor" 
+               type="text" 
+               class="w-full rounded-lg border-slate-300 bg-slate-200 focus:bg-white focus:border-slate-500 focus:ring-slate-500 shadow-md transition-all p-2.5" 
+               placeholder="Ej: Distribuidora Sol">
+    </div>
+
 </div>
-
-          <div class="md:col-span-2">
-              <label class="block text-sm font-semibold text-slate-700 mb-1">Proveedor</label>
-              <input formControlName="proveedor" type="text" class="w-full rounded-lg border-slate-300 bg-slate-200 focus:bg-white focus:border-slate-500 focus:ring-slate-500 shadow-md transition-all p-2.5" placeholder="Ej: Distribuidora Sol">
-          </div>
-      </div>
 
       <hr class="border-slate-100">
 
